--- a/HariHaran/Billing-Software/CSS/style.css
+++ b/HariHaran/Billing-Software/CSS/style.css
@@ -87,12 +87,13 @@ label{
 input{
 
     width: 160px;
-    height: 30px;
+    height: 25px;
+    padding-left: 10px;
     background-color: transparent;
     border: 1px solid #e3e3e3;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     outline: none;
-    margin:10px 20px;
+    margin:5px 20px;
     
 }
 input:hover{
@@ -111,6 +112,17 @@ input:hover{
     border: 1px solid grey;
     background-color: yellowgreen;
     font-weight: bolder;
+}
+#btn{
+
+    margin-top: 20px;
+    margin-left: 10%;
+    width: 100px;
+    height: 30px;
+    border: 1px solid grey;
+    background-color: tomato;
+    font-weight: bolder;
+    
 }
 .content-1{
     
@@ -185,4 +197,22 @@ ul li{
     background-color: whitesmoke;
     text-align: center;
 }
- 
+.table-total{
+
+        margin-top: 5%;
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+
+}
+.table-total span{
+
+    font-size: 1.5rem;
+    font-weight: bolder;
+    background-color: white;
+    padding: 15px;
+}
+.table-total span:nth-child(1){
+
+    color: red;
+} 
