--- a/HariHaran/Billing-Software/CSS/style.css
+++ b/HariHaran/Billing-Software/CSS/style.css
@@ -94,52 +94,57 @@ input{
     font-size: 1.3rem;
     outline: none;
     margin:5px 20px;
+    border-radius: 3px;
     
 }
 input:hover{
 
     outline: thistle;
     border-radius: 5px;
-    transition: 500ms;
+    transition: 100ms;
     border: none;
     box-shadow: 1px 1px 3px black;
 
 }
 #submit{
     margin-left: 10%;
-    width: 100px;
-    height: 30px;
-    border: 1px solid grey;
-    background-color: yellowgreen;
+    width: 130px;
+    height: 40px;
+    background-color: white;
     font-weight: bolder;
+    color: rgba(0, 183, 255, 0.979);
+    box-shadow: 0px 0px 10px #6f696a;
+}
+#submit:hover{
+
+    opacity: 0.9;
 }
 #btn{
 
-    margin-top: 20px;
-    margin-left: 10%;
+    margin-left: 0;
     width: 100px;
-    height: 30px;
+    height: 35px;
     border: 1px solid grey;
-    background-color: tomato;
+    background-color:white;
     font-weight: bolder;
+    padding-left: 0px;
+    color: #11dbfb;
+    border-radius: 5px;
     
 }
 .content-1{
     
     flex-grow: 1;
+    margin-right: 20px;
+    margin-top: 29px;
     
 }
 .content-2{
 
-    flex-grow: 1.5;
+    flex-grow: 1;
    
 }
-#content-2-header{
-
-    width: 100%;
-    border: 1px solid white;
-}
-#content-1-header-1 {
+#content-2-header-1 {
 
     height: 30px;
     width: 100%;
@@ -147,8 +152,9 @@ input:hover{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    border-radius: 5px;
 }
-#content-1-header-1 p{
+#content-2-header-1 p{
 
     font-size: 1.3rem;
     font-weight: bolder;
@@ -180,6 +186,7 @@ input:hover{
     text-align: center;
     background-color: #3c4242;
     color: white;
+    box-shadow:0px 0px 1px white;   
 
 }
 .table-content{
@@ -197,12 +204,12 @@ ul li{
     background-color: whitesmoke;
     text-align: center;
 }
-.table-total{
+.table-total,#table-total-2{
 
         margin-top: 5%;
         width: 100%;
         display: flex;
-        justify-content: flex-end;
+    
 
 }
 .table-total span{
@@ -210,9 +217,59 @@ ul li{
     font-size: 1.5rem;
     font-weight: bolder;
     background-color: white;
-    padding: 15px;
+    padding: 10px;
+    padding-right: 50px;
 }
 .table-total span:nth-child(1){
 
     color: red;
 } 
+#total-text,#total-value,#gst-text,#gst-value,#gt-text,#gt-value{
+
+    font-size: 1.5rem;
+    font-weight: bolder;
+    padding: 20px 0px;
+}
+.table-total-2{
+
+    display: flex;
+
+flex-direction: column;}
+
+.table-total-3{
+
+    display: flex;
+    background-color:#ffffff91;
+    border-radius: 50px;
+    align-content: space-between;
+    justify-content: space-around;
+
+}
+#gt-text{
+
+    margin-left: -10px;
+}
+.table-total-2 button{
+
+    margin-top: 10px;
+}
+#edits{
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+.edit-input{
+
+    width: 20%;
+    height: 30px;
+    background-color: white;
+    color: red;
+    font-size: 1.2rem;
+    box-shadow: 0px 0px 5px grey;
+    border-radius: 5px;
+    margin: 12px 0px;
+}
+
+
