--- a/HariHaran/Billing-Software/CSS/style.css
+++ b/HariHaran/Billing-Software/CSS/style.css
@@ -2,7 +2,6 @@
 
 *{
 
-
     margin: 0; 
     padding: 0;
     border: 0;
@@ -15,13 +14,8 @@
 
     width: 100%;
     height: 650px;
-    /* background-image: linear-gradient(60deg, #abecd6 0%, #fbed96 100%);; */
-    /* display: flex; */
     padding: 20px;
-    opacity: 0.8;
     background-image: url(../images/bg1.jpg);
-    background-blend-mode: lighten;
-    /* background-repeat: no-repeat; */
 }
 .header{
 
@@ -267,5 +261,94 @@ ul li{
     width: 45px;
 }
 
+@media only screen and (max-width:500px){
 
+
+        .container{
+
+            width: 100%;
+            padding: 5px;
+            background-size: cover;
+            font-size: 5px;
+
+        }
+        .main{
+
+            display: flex;
+            flex-direction: column;
+    
+        }
+        .column h1{
+
+            font-size: 1rem;
+        }
+        .table-total-3 {
+            width: 200px;
+            display: flex;
+            color: white;
+            background-color: lightgrey;
+            justify-content: space-around;
+            transform: translate(110%, 38px);
+        }
+        .content{
+
+            background-image: url(../images/bg1.jpg);
+            /* z-index: -1; */
+        }
+        input{
+
+            width: 170px;
+            font-size: 1rem;
+            margin-left: 3%;;
+        }
+        #submit{
+            margin-left: 19%;
+            width: 70px;
+            height: 30px;
+            font-size: 1rem;
+            }
+
+
+}
+@media only screen and (max-width:340px){
+
+    #head{
+
+        font-size: 1.5rem;
+        padding: 10px;
+    }
+    form h2{
+
+        font-size: 1.4rem;
+    }
+    label{
+        font-size: 1.1rem;
+    }
+    #submit{
+    margin-left: 19%;
+    width: 70px;
+    height: 30px;
+    font-size: 1rem;
+    }
+    .column h1{
+        font-size: 0.6rem;
+    }
+    .table-total-3{
+
+        width: 150px;
+    }
+    #total-text{
+
+        font-size: 1rem;
+    }
+    .edit-input{
+
+        height: 20px;
+        width: 60px;
+        font-size: 0.9rem;
+        padding: 2px;
+    }
+
+
+}
 
