condition for edit & remove added

--- a/HariHaran/Billing-Software/CSS/style.css
+++ b/HariHaran/Billing-Software/CSS/style.css
@@ -261,6 +261,12 @@ ul li{
     width: 45px;
 }
 
+@media only screen and (max-width:900px){
+
+
+    
+}
+
 @media only screen and (max-width:500px){
 
 
