--- a/HariHaran/Billing-Software/CSS/style.css
+++ b/HariHaran/Billing-Software/CSS/style.css
@@ -15,7 +15,9 @@
     width: 100%;
     height: 650px;
     padding: 20px;
-    background-image: url(../images/bg1.jpg);
+    background-image: url(../images/bg3.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 .header{
 
@@ -25,6 +27,7 @@
 #head{
 
     font-size: 2.6rem;
+    color: white;
     animation: right 5s  ease-in-out infinite;
     background-image: linear-gradient(-30deg, #abecd6 40%, #fbed96 100%);
     background-size: 300%;
@@ -63,6 +66,7 @@ form{
 form h2{
     font-size: 2rem;
     text-decoration: underline;
+    color: white;
 }
 .content{
 
@@ -83,6 +87,7 @@ label{
     padding: 10px;
     padding-left: 0px;
     font-weight: bolder;
+    color: white;
 }
 input{
 
@@ -179,7 +184,7 @@ input:hover{
 
     padding: 10px 20px;
     text-align: center;
-    background-color: #283838;
+    background-color: #000000;
     color: white;
     box-shadow:0px 0px 1px white; 
     
