--- a/HariHaran/CSS/style.css
+++ b/HariHaran/CSS/style.css
@@ -248,6 +248,8 @@ p{
         .main{
 
             width: 100%;
+            grid-template-rows: 330px auto;
+
         }
 
         .card{
@@ -269,6 +271,7 @@ p{
 
             width: 100%;
         }
+
         
 
 
@@ -293,6 +296,27 @@ p{
             line-height: 1.8;
             text-align: center;
         }
+        .card-1{    
+         
+            background-image: url("images/prof.jpeg");
+
+        }
+
+}
+@media only screen and (max-width:370px){
+
+    .card-1{
+        
+        background-repeat: no-repeat;
+    }
+    .profile-data h2, .card-1 h3{
+
+            font-size: 1.8rem;
+
+    }
+    p{
+        font-size:1.4rem;
+    }
 
 
 }
