--- a/HariHaran/CSS/style.css
+++ b/HariHaran/CSS/style.css
@@ -188,7 +188,7 @@ p{
     align-items: center;
     justify-content: center;
     border-bottom:1px solid lightgrey;
-    background-image: url('images/slider-1.png');
+    background-image: url('images/prof.jpeg');
     background-position: bottom;
 
 }
